--- a/.github/workflows/assembler.yml
+++ b/.github/workflows/assembler.yml
@@ -26,4 +26,4 @@ jobs:
         run: cd assembler && npm install
         
       - name: Build Application
-        run: npm run build
+        run: cd assembler && npm run build
