Added Jest package for unit testing.

--- a/assembler/package.json
+++ b/assembler/package.json
@@ -8,7 +8,7 @@
     "compile": "npx tsc",
     "clean": "npx rimraf ./dist ./out",
     "build": "npm run compile && npx pkg -t node18-linux-x64,node18-macos-x64,node18-win-x64,node18-alpine-x64 --out-path ./out ./dist/assembler.js && npx rimraf ./dist/",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest --verbose"
   },
   "repository": {
     "type": "git",
@@ -28,8 +28,11 @@
   "homepage": "https://github.com/nthnn/Brillo-8#readme",
   "devDependencies": {
     "@colors/colors": "^1.6.0",
+    "@types/jest": "^29.5.5",
+    "jest": "^29.7.0",
     "pkg": "^5.8.1",
     "rimraf": "^5.0.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
