Unit Testing on GitHub CI workflow.

--- a/.github/workflows/assembler.yml
+++ b/.github/workflows/assembler.yml
@@ -24,6 +24,9 @@ jobs:
         
       - name: Install Dependencies
         run: cd assembler && npm install
-        
+
+      - name: Unit Testing
+        run: cd assembler && npm test
+
       - name: Build Application
         run: cd assembler && npm run build
