--- a/docs/package.json
+++ b/docs/package.json
@@ -4,8 +4,10 @@
   "description": "Brillo-8 Official Documentation",
   "source": "src/index.html",
   "scripts": {
+    "build": "parcel build src/index.html",
     "docs": "parcel src/index.html --open",
-    "clean": "rimraf .parcel-cache dist"
+    "clean": "rimraf .parcel-cache dist",
+    "deploy": "cd .. && npx vercel deploy --prod && cd docs"
   },
   "repository": {
     "type": "git",
@@ -32,6 +34,7 @@
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.1",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vercel": "^32.2.4"
   }
 }
